--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <main class="main">
         <section id="about" class="about-section">
             <div class="section-content">
-                <div class="about-image-wrapper image-gallery-wrapper"> <button class="image-nav-button prev-button fas fa-chevron-left" aria-label="Previous image"></button> <img id="SciImg" src="ressources/test.png"
+                <div class="about-image-wrapper image-gallery-wrapper"> <button class="image-nav-button prev-button fas fa-chevron-left" aria-label="Previous image"></button> <img id="SciImg" src="ressources/image.webp"
                         alt="Two scientists in a lab coat reviewing documents, with 'Clinical Trial' and related icons overlaid."
                         class="about-image image-to-cycle" /> <button class="image-nav-button next-button fas fa-chevron-right" aria-label="Next image"></button> </div>
                 <div class="about-details">
