--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="navbar section-content">
             <a href="#" class="nav-logo">
                 <h1 class="logo-text">
-                    <img class="logo" src="ressources/logo.png" alt="Longfort Consulting logo" /> Longfort
+                    <img class="logo" src="ressources/logo.png" alt="LC" /> Longfort
                     Consulting
                 </h1>
             </a>
@@ -50,9 +50,15 @@
     <main class="main">
         <section id="about" class="about-section">
             <div class="section-content">
-                <div class="about-image-wrapper image-gallery-wrapper"> <button class="image-nav-button prev-button fas fa-chevron-left" aria-label="Previous image"></button> <img id="SciImg" src="ressources/image.webp"
-                        alt="Two scientists in a lab coat reviewing documents, with 'Clinical Trial' and related icons overlaid."
-                        class="about-image image-to-cycle" /> <button class="image-nav-button next-button fas fa-chevron-right" aria-label="Next image"></button> </div>
+                <div class="about-image-wrapper image-gallery-wrapper"> 
+                    <button class="image-nav-button prev-button fas fa-chevron-left" aria-label="Previous image"></button> 
+                    <div class="image-slider">
+                        <img id="SciImg" src="pexels-diva-plavalaguna-6146703.jpg"
+                            alt="Two scientists in a lab coat reviewing documents, with 'Clinical Trial' and related icons overlaid."
+                            class="about-image image-to-cycle" />
+                        <img class="overlay" src="dessin.png" alt="overlay" /> </div>
+                    <button class="image-nav-button next-button fas fa-chevron-right" aria-label="Next image"></button> 
+                </div>
                 <div class="about-details">
                     <h2 class="section-title">About Us</h2>
                     <p class="text">
@@ -147,7 +153,7 @@
                     </div>
                 </div>
                 <div id="glassTime" class="about-image-wrapper">
-                    <img src="ressources/timely.webp"
+                    <img src="pexels-diva-plavalaguna-6146703.jpg"
                         alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research."
                         class="about-image" />
                 </div>
@@ -196,9 +202,7 @@
             <div class="blog-content">
                 <div class="about-details">
                     <h2 class="section-title">Blog</h2>
-                    <script src="https://elfsightcdn.com/platform.js" async></script>
-                    <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
-                </div>
+                    </div>
             </div>
         </section>
         <section class="about-section">
