--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="about-image-wrapper image-gallery-wrapper"> 
                     <button class="image-nav-button prev-button fas fa-chevron-left" aria-label="Previous image"></button> 
                     <div class="image-slider">
-                        <img id="SciImg" src="pexels-diva-plavalaguna-6146703.jpg"
+                        <img id="SciImg" src="ressources/image.webp"
                             alt="Two scientists in a lab coat reviewing documents, with 'Clinical Trial' and related icons overlaid."
                             class="about-image image-to-cycle" />
                         <img class="overlay" src="dessin.png" alt="overlay" /> </div>
@@ -226,3 +226,4 @@
 
 
 </html>
+
