--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@
             <div class="blog-content">
                 <div class="about-details">
                     <h2 class="section-title">Blog</h2>
-                    </div>
+                    <script src="https://elfsightcdn.com/platform.js" async></script>
+                    <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>    
+                </div>
             </div>
         </section>
         <section class="about-section">
@@ -226,4 +228,5 @@
 
 
 </html>
+
 
