--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         <section id="about" class="about-section">
             <div class="section-content">
                 <div class="about-image-wrapper image-gallery-wrapper"> 
-                    <button class="image-nav-button prev-button fas fa-chevron-left" aria-label="Previous image"></button> 
+                    <!--<button class="image-nav-button prev-button fas fa-chevron-left" aria-label="Previous image"></button>-->
                     <div class="image-slider">
                         <img id="SciImg" src="ressources/tmp/pexels-mikhail-nilov-8851547.jpg"
                             alt="Two scientists in a lab coat reviewing documents, with 'Clinical Trial' and related icons overlaid."
                             class="about-image image-to-cycle" />
                         <img class="overlay" src="dessin.png" alt="overlay" /> </div>
-                    <button class="image-nav-button next-button fas fa-chevron-right" aria-label="Next image"></button> 
+                    <!--<button class="image-nav-button next-button fas fa-chevron-right" aria-label="Next image"></button>--> 
                 </div>
                 <div class="about-details">
                     <h2 class="section-title">About Us</h2>
@@ -228,6 +228,7 @@
 
 
 </html>
+
 
 
 
