Refactor index.html for improved formatting
The HTML document has been reformatted and cleaned up, removing unnecessary whitespace and ensuring proper structure.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <img id="SciImg" src="ressources/tmp/pexels-mikhail-nilov-8851547.jpg"
                             alt="Two scientists in a lab coat reviewing documents, with 'Clinical Trial' and related icons overlaid."
                             class="about-image image-to-cycle" />
-                        <img class="overlay" src="dessin.png" alt="overlay" /> </div>
+                        <img class="overlay" src="ressources/tmp/dessin.png" alt="overlay" /> </div>
                     <!--<button class="image-nav-button next-button fas fa-chevron-right" aria-label="Next image"></button>--> 
                 </div>
                 <div class="about-details">
@@ -228,6 +228,7 @@
 
 
 </html>
+
 
 
 
