Fix HTML formatting and clean up code

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <div id="glassTime" class="about-image-wrapper">
-                    <img src="pexels-diva-plavalaguna-6146703.jpg"
+                    <img src="ressources/timely.webp"
                         alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research."
                         class="about-image" />
                 </div>
@@ -228,6 +228,7 @@
 
 
 </html>
+
 
 
 
