Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -51,14 +51,59 @@
         <section id="about" class="about-section">
             <div class="section-content">
                 <div class="about-image-wrapper image-gallery-wrapper"> 
-                    <!--<button class="image-nav-button prev-button fas fa-chevron-left" aria-label="Previous image"></button>-->
                     <div class="image-slider">
                         <img id="SciImg" src="ressources/tmp/pexels-mikhail-nilov-8851547.jpg"
                             alt="Two scientists in a lab coat reviewing documents, with 'Clinical Trial' and related icons overlaid."
                             class="about-image image-to-cycle" />
-                        <img class="overlay" src="ressources/tmp/dessin.png" alt="overlay" /> </div>
-                    <!--<button class="image-nav-button next-button fas fa-chevron-right" aria-label="Next image"></button>--> 
-                </div>
+                        <!--<img class="overlay" src="ressources/tmp/dessin.png" alt="overlay" />--> </div>
+                    <div class="scene">
+                        <div class="dna-halo"></div> 
+                        <div class="dna-helix">
+                            <div class="base" style="--i: 0; --color-1: var(--color-a); --color-2: var(--color-t);">
+                                <div class="molecule strand-1"></div><div class="molecule strand-2"></div><div class="barre"></div>
+                            </div>
+                            <div class="base" style="--i: 1; --color-1: var(--color-c); --color-2: var(--color-g);">
+                                <div class="molecule strand-1"></div><div class="molecule strand-2"></div><div class="barre"></div>
+                            </div>
+                            <div class="base" style="--i: 2; --color-1: var(--color-g); --color-2: var(--color-c);">
+                                <div class="molecule strand-1"></div><div class="molecule strand-2"></div><div class="barre"></div>
+                            </div>
+                            <div class="base" style="--i: 3; --color-1: var(--color-t); --color-2: var(--color-a);">
+                                <div class="molecule strand-1"></div><div class="molecule strand-2"></div><div class="barre"></div>
+                            </div>
+                            <div class="base" style="--i: 4; --color-1: var(--color-a); --color-2: var(--color-t);">
+                                <div class="molecule strand-1"></div><div class="molecule strand-2"></div><div class="barre"></div>
+                            </div>
+                            <div class="base" style="--i: 5; --color-1: var(--color-c); --color-2: var(--color-g);">
+                                <div class="molecule strand-1"></div><div class="molecule strand-2"></div><div class="barre"></div>
+                            </div>
+                            <div class="base" style="--i: 6; --color-1: var(--color-c); --color-2: var(--color-g);">
+                                <div class="molecule strand-1"></div><div class="molecule strand-2"></div><div class="barre"></div>
+                            </div>
+                            <div class="base" style="--i: 7; --color-1: var(--color-g); --color-2: var(--color-c);">
+                                <div class="molecule strand-1"></div><div class="molecule strand-2"></div><div class="barre"></div>
+                            </div>
+                            <div class="base" style="--i: 8; --color-1: var(--color-a); --color-2: var(--color-t);">
+                                <div class="molecule strand-1"></div><div class="molecule strand-2"></div><div class="barre"></div>
+                            </div>
+                            <div class="base" style="--i: 9; --color-1: var(--color-a); --color-2: var(--color-t);">
+                                <div class="molecule strand-1"></div><div class="molecule strand-2"></div><div class="barre"></div>
+                            </div>
+                            <div class="base" style="--i: 10; --color-1: var(--color-t); --color-2: var(--color-a);">
+                                <div class="molecule strand-1"></div><div class="molecule strand-2"></div><div class="barre"></div>
+                            </div>
+                            <div class="base" style="--i: 11; --color-1: var(--color-g); --color-2: var(--color-c);">
+                                <div class="molecule strand-1"></div><div class="molecule strand-2"></div><div class="barre"></div>
+                            </div>
+                            <div class="base" style="--i: 12; --color-1: var(--color-c); --color-2: var(--color-g);">
+                                <div class="molecule strand-1"></div><div class="molecule strand-2"></div><div class="barre"></div>
+                            </div>
+                            <div class="base" style="--i: 13; --color-1: var(--color-t); --color-2: var(--color-a);">
+                                <div class="molecule strand-1"></div><div class="molecule strand-2"></div><div class="barre"></div>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
                 <div class="about-details">
                     <h2 class="section-title">About Us</h2>
                     <p class="text">
@@ -228,9 +273,3 @@
 
 
 </html>
-
-
-
-
-
-
