--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <img id="SciImg" src="ressources/tmp/pexels-mikhail-nilov-8851547.jpg"
                             alt="Two scientists in a lab coat reviewing documents, with 'Clinical Trial' and related icons overlaid."
                             class="about-image image-to-cycle" />
-                        <img class="overlay" src="ressources/tmp/dessin.png" alt="overlay" /> </div>
+                        <!--<img class="overlay" src="ressources/tmp/dessin.png" alt="overlay" />--> </div>
                     
                     <button class="image-nav-button next-button fas fa-chevron-right" aria-label="Next image"></button> 
 
@@ -279,3 +279,4 @@
 
 
 </html>
+
