--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Longfort Consulting | Clinical Studies Consultant</title>
     <meta name="description"
         content="Longfort Consulting offers regulatory expertise to secure clinical trial approval in a timely and quality-controlled manner.
-    Benefits from our guidance in oncology, immunotherapy, rare diseases, pediatrics, and gene therapy to achieve successful trial outcomes.
+    Leverage our guidance in oncology, immunotherapy, rare diseases, pediatrics, and gene therapy to achieve successful trial outcomes.
     Conducts robust clinical trials using bulletproof protocols and a purpose-built document pack to obtain first-time approval from regulatory authorities." />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
@@ -117,8 +117,8 @@
                         timely and quality-controlled manner.
                     </p>
                     <p class="text">
-                        Benefits from our guidance in oncology, immunotherapy, rare diseases, pediatrics, and
-                        gene therapy to reach successful trial outcomes.
+                        Leverage our guidance in oncology, immunotherapy, rare diseases, pediatrics
+                        and gene therapy to achieve successful trial outcomes.
                     </p>
                     <p class="text">
                         Conducts robust <b>clinical trials</b> using <b>bulletproof</b> protocols and a purpose-built document pack
@@ -279,4 +279,5 @@
 
 
 </html>
+
 
