--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="description"
         content="Longfort Consulting offers regulatory expertise to secure clinical trial approval in a timely and quality-controlled manner.
     Leverage our guidance in oncology, immunotherapy, rare diseases, pediatrics, and gene therapy to achieve successful trial outcomes.
-    Conducts robust clinical trials using bulletproof protocols and a purpose-built document pack to obtain first-time approval from regulatory authorities." />
+    Conduct robust clinical trials using watertight protocols and a purpose-built document pack to obtain first-pass approval from regulatory authorities." />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
@@ -113,7 +113,7 @@
                 <div class="about-details">
                     <h2 class="section-title">About Us</h2>
                     <p class="text">
-                        Longfort Consulting offers regulatory expertise to secure clinical trial approval in a
+                        Longfort Consulting provides regulatory expertise to secure clinical trial approval in a
                         timely and quality-controlled manner.
                     </p>
                     <p class="text">
@@ -121,8 +121,8 @@
                         and gene therapy to achieve successful trial outcomes.
                     </p>
                     <p class="text">
-                        Conducts robust <b>clinical trials</b> using <b>bulletproof</b> protocols and a purpose-built document pack
-                        to obtain <b>first-time approval</b> from regulatory authorities.
+                        Conduct robust <b>clinical trials</b> using <b>watertight</b> protocols and a purpose-built document pack
+                        to obtain <b>first-pass approval</b> from regulatory authorities.
                     </p>
                     <span class="buttons">
                         <a href="#services" class="button">Learn more</a>
@@ -279,5 +279,6 @@
 
 
 </html>
+
 
 
