--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta property="og:type" content="website" />
     <title>Longfort Consulting | Clinical Studies Consultant</title>
     <meta name="description"
-        content="Longfort Consulting offers regulatory expertise to secure clinical trial approval in a timely and quality-controlled manner.
-    Leverage our guidance in oncology, immunotherapy, rare diseases, pediatrics, and gene therapy to achieve successful trial outcomes.
-    Conduct robust clinical trials using watertight protocols and a purpose-built document pack to obtain first-pass approval from regulatory authorities." />
+        content="Longfort Consulting provides regulatory expertise to secure clinical trial approval in a timely and quality-controlled manner.
+    Leverage our guidance in oncology, immunotherapy, rare diseases, pediatrics and gene therapy to achieve successful trial outcomes.
+    Conduct robust clinical trials using watertight protocols and a purpose-built document package to obtain first-pass approval from regulatory authorities." />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
@@ -121,7 +121,7 @@
                         and gene therapy to achieve successful trial outcomes.
                     </p>
                     <p class="text">
-                        Conduct robust <b>clinical trials</b> using <b>watertight</b> protocols and a purpose-built document pack
+                        Conduct robust <b>clinical trials</b> using <b>watertight</b> protocols and a purpose-built document package
                         to obtain <b>first-pass approval</b> from regulatory authorities.
                     </p>
                     <span class="buttons">
@@ -279,6 +279,7 @@
 
 
 </html>
+
 
 
 
