--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
                 <div class="about-details">
                     <h2 class="section-title">About Us</h2>
                     <p class="text">
-                        Longfort Consulting provides regulatory expertise to secure clinical trial approval in a
+                        Longfort Consulting provides <b>regulatory expertise</b> to secure clinical trial approval in a
                         timely and quality-controlled manner.
                     </p>
                     <p class="text">
-                        Leverage our guidance in oncology, immunotherapy, rare diseases, pediatrics
+                        <b>Leverage</b> our guidance in oncology, immunotherapy, rare diseases, pediatrics
                         and gene therapy to achieve successful trial outcomes.
                     </p>
                     <p class="text">
@@ -279,6 +279,7 @@
 
 
 </html>
+
 
 
 
