--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         timely and quality-controlled manner.
                     </p>
                     <p class="text">
-                        <b>Leverage</b> our guidance in oncology, immunotherapy, rare diseases, pediatrics
+                        <b>Leverage our guidance</b> in oncology, immunotherapy, rare diseases, pediatrics
                         and gene therapy to achieve successful trial outcomes.
                     </p>
                     <p class="text">
@@ -279,6 +279,7 @@
 
 
 </html>
+
 
 
 
