--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
                 <div class="about-details">
                     <h2 class="section-title">About Us</h2>
                     <p class="text">
-                        Longfort Consulting provides <b>regulatory expertise</b> to secure clinical trial approval in a
+                        Longfort Consulting provides regulatory expertise to secure clinical trial approval in a
                         timely and quality-controlled manner.
                     </p>
                     <p class="text">
-                        <b>Leverage our guidance</b> in oncology, immunotherapy, rare diseases, pediatrics
+                        Leverage our guidance in oncology, immunotherapy, rare diseases, pediatrics
                         and gene therapy to achieve successful trial outcomes.
                     </p>
                     <p class="text">
-                        Conduct robust <b>clinical trials</b> using <b>watertight</b> protocols and a purpose-built document package
+                        Conduct robust <b>clinical trials</b> using watertight protocols and a <b>purpose-built</b> document package
                         to obtain <b>first-pass approval</b> from regulatory authorities.
                     </p>
                     <span class="buttons">
@@ -279,6 +279,7 @@
 
 
 </html>
+
 
 
 
