--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="only light" />
     <meta property="og:title" content="Longfort Consulting | Clinical Studies Consultant" />
-    <meta property="og:description" content="Longfort Consulting offers regulatory expertise for clinical trials approval." />    <meta property="og:image" content="https://longfort-consulting.com/ressources/socialNetworkImage.jpg" />
+    <meta property="og:description" content="Longfort Consulting provides regulatory expertise for clinical trials approval." />    <meta property="og:image" content="https://longfort-consulting.com/ressources/socialNetworkImage.jpg" />
     <meta property="og:url" content="https://longfort-consulting.com" />
     <meta property="og:type" content="website" />
     <title>Longfort Consulting | Clinical Studies Consultant</title>
