--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         <section class="footer-section">
             <div>
                 <div class="footer">
-                    <a>© 2025 Longfort Consulting</a><a>|</a>
+                    <a>© Longfort Consulting 2025.</a><a>|</a>
                     <a style="color: #3b3737" href="LegalNotice_en.html">Legal notice</a><a>|</a>
                     <a>&#127850; Cookie-free</a><a>|</a>
                     <a>&#x1F33F;0.2g CO²/visit</a>
@@ -279,6 +279,7 @@
 
 
 </html>
+
 
 
 
