--- a/index.html
+++ b/index.html
@@ -265,8 +265,9 @@
         <section class="footer-section">
             <div>
                 <div class="footer">
-                    <a>© Longfort Consulting 2025.</a><a>|</a>
-                    <a style="color: #3b3737" href="LegalNotice_en.html">Legal notice <i class="fa fa-external-link" aria-hidden="true"></i></a><a>|</a>
+                    <a>© 2025 All Rights Reserved, Longfort Consulting</a><a>|</a>
+                    <a style="color: #3b3737" href="LegalNotice_en.html">Privacy <i class="fa fa-external-link" aria-hidden="true"></i></a><a>|</a>
+                    <a style="color: #3b3737" href="LegalNotice_en.html">Terms & Conditions <i class="fa fa-external-link" aria-hidden="true"></i></a><a>|</a>
                     <a>&#127850; Cookie-free</a><a>|</a>
                     <a>&#x1F33F;0.2g CO²/visit</a>
                 </div>
@@ -279,6 +280,7 @@
 
 
 </html>
+
 
 
 
