--- a/PrivacyPolicy_en.html
+++ b/PrivacyPolicy_en.html
@@ -10,7 +10,7 @@
     <body>
     <section id="top" class="about-section" style="padding: 24px 24px 24px 24px;text-transform: uppercase;font-size: 2rem;">
         <a href="index.html" class="section-title" style="vertical-align: baseline;color:#3b3737;text-decoration: none;"> &larr; Back</a>
-        <a href="LegalNotice_fr.html" style="float: right; cursor: pointer; font-size: 1.2rem; text-decoration: none; color: #1773b7;">Fr</a>
+        <a href="PrivacyPolicy_fr.html" style="float: right; cursor: pointer; font-size: 1.2rem; text-decoration: none; color: #1773b7;">Fr</a>
     </section>
     <section class="about-section">
         <div class="section-content">
