--- a/TermsCond_fr.html
+++ b/TermsCond_fr.html
@@ -10,7 +10,7 @@
     <body>
     <section id="top" class="about-section" style="padding: 24px 24px 24px 24px;text-transform: uppercase;font-size: 2rem;">
         <a href="index.html" class="section-title" style="vertical-align: baseline;color:#3b3737;text-decoration: none;"> &larr; Retour</a>
-        <a href="LegalNotice_en.html" style="float: right; cursor: pointer; font-size: 1.2rem; text-decoration: none; color: #1773b7;">En</a>
+        <a href="TermsCond_en.html" style="float: right; cursor: pointer; font-size: 1.2rem; text-decoration: none; color: #1773b7;">En</a>
     </section>
     <section class="about-section">
         <div class="section-content">
