--- a/PrivacyPolicy_fr.html
+++ b/PrivacyPolicy_fr.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="color-scheme" content="only light">
-        <title>Mentions Légales</title>
+        <title>Protection des données personnelles</title>
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
