--- a/TermsCond_en.html
+++ b/TermsCond_en.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="color-scheme" content="only light">
-        <title>Legal Notice</title>
+        <title>Terms and conditions</title>
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
