Fix HTML structure and formatting issues

--- a/index.html
+++ b/index.html
@@ -135,16 +135,19 @@
                 <div class="about-details">
                     <h2 class="section-title">Services</h2>
                     <div>
+                        <p class="text">
+                            <b>Turn regulatory complexity into speed.</b> Agile expertize tailored for Biotechs, MedTechs and academia.
+                        </p>
                         <h3 class="service-heading">Regulatory Strategy</h3>
                         <ul class="service-list">
                             <li class="service-item">
-                                <a class="text">Worldwide Submissions</a>
+                                <a class="text">Early-phase roadmap</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">Complex Trial Strategy</a>
+                                <a class="text">Complex trial strategy</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">Readiness Audits</a>
+                                <a class="text">Submission readiness</a>
                                 <span class="flyover-container">
                                     <a href="ressources/RegulatoryFlashAudit.pdf" target="_blank" class="pdf-link">
                                         <i class="fa-solid fa-link"></i>
@@ -156,31 +159,26 @@
                             </li>
                         </ul>
 
-                        <h3 class="service-heading">
-                            Operational Coord. (Trial Start-up)
-                        </h3>
+                        <h3 class="service-heading">Submission & CTIS expertise</h3>
                         <ul class="service-list">
                             <li class="service-item">
-                                <a class="text">Sites Identification and Selection</a>
+                                <a class="text">CTIS full support</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">ICF Adaptation</a>
+                                <a class="text">ICF adaptation</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">CA and EC Submissions</a>
+                                <a class="text">Global CA and EC submissions</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">Contract and Budget Negotiations</a>
-                            </li>
-                            <li class="service-item">
-                                <a class="text">Sites Activation</a>
-                            </li>
+                                <a class="text">Lifecycle management</a>
+                            </li
                         </ul>
 
-                        <h3 class="service-heading">Support</h3>
+                        <h3 class="service-heading">Agile Operational Support</h3>
                         <ul class="service-list">
                             <li class="service-item">
-                                <a class="text">Start-up Project Support</a>
+                                <a class="text">On-demand resources</a>
                                 <span class="flyover-container">
                                     <a href="ressources/StudyStartUpBoosterPortrait.pdf" target="_blank" class="pdf-link">
                                         <i class="fa-solid fa-link"></i>
@@ -191,13 +189,15 @@
                                 </span>
                             </li>
                             <li class="service-item">
-                                <a class="text">Clinical Operations Assessment</a>
+                                <a class="text">Workflow optimization</a>
                             </li>
                             <li class="service-item" style="padding-bottom: 28px;">
-                                <a class="text">Regulatory Team Training</a>
+                                <a class="text">Team coordination/training</a>
                             </li>
                         </ul>
-
+                        <p class="text">
+                            Ready to streamline your submission ?
+                        </p>
                         <span class="buttons">
                             <a href="#contact" class="button">Leave a message</a>
                         </span>
@@ -280,6 +280,7 @@
 
 
 </html>
+
 
 
 
