--- a/index.html
+++ b/index.html
@@ -266,8 +266,7 @@
             <div>
                 <div class="footer">
                     <a>© 2025 All Rights Reserved, Longfort Consulting</a><a>|</a>
-                    <a style="color: #3b3737" href="legal.html">Privacy <i class="fa fa-external-link" aria-hidden="true"></i></a><a>|</a>
-                    <a style="color: #3b3737" href="legal.html">Terms & Conditions <i class="fa fa-external-link" aria-hidden="true"></i></a><a>|</a>
+                    <a style="color: #3b3737" href="legal.html">Legal Notice & Privacy Policy <i class="fa fa-external-link" aria-hidden="true"></i></a><a>|</a>
                     <a>&#127850; Cookie-free</a><a>|</a>
                     <a>&#x1F33F;0.2g CO²/visit</a>
                 </div>
@@ -280,6 +279,7 @@
 
 
 </html>
+
 
 
 
