--- a/legal.html
+++ b/legal.html
@@ -20,7 +20,7 @@
                 font-size: 1.2rem;
                 text-decoration: none;
                 color: #1773b7;
-                margin-left: 10px;
+                /*margin-left: 10px;*/
             }
             .lang-switch.active-lang {
                 font-weight: bold;
