--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
                 <div class="about-details">
                     <h2 class="section-title">Contact</h2>
                     <div>
+                        <p> </p>
                         <form action="https://api.web3forms.com/submit" method="POST" class="styled-form">
                             <input type="hidden" name="access_key" value="9aa4c03f-af54-404b-b9f9-ecf3e5fa28b5" />
                             <div class="form-group">
@@ -234,7 +235,7 @@
                             <button type="submit" class="button">Send</button>
                         </form>
                         <p class="text">
-                            Have a question ? Please fill out the form below, or feel free to contact me directly.
+                            Have a question ? Please fill out the form just above, or feel free to contact me directly.
                         </p>
                         <div class="social-link-list">
                             <a href="mailto:sabrina.guittard@longfort-consulting.com" class="social-link"><i
@@ -279,6 +280,7 @@
 
 
 </html>
+
 
 
 
