--- a/legal.html
+++ b/legal.html
@@ -84,7 +84,7 @@
                     <p>VAT Number: FR16988276515</p>
                     <p>Address: 2 place Octave Sage, 31100 Toulouse, France</p>
                     <p>Phone Number: +33 (0)6 52 50 24 98</p>
-                    <p>Webmaster: Jean-Louis Guittard</p>
+                    <p>Webmaster: <a href="mailto:jl.guittard@gmail.com">Jean-Louis Guittard</a></p>
                 </div>
             </div>
         </section>
@@ -126,7 +126,7 @@
                     <p>In accordance with the "Informatique et Libertés" French law of January 6, 1978, as amended, and the
                         General Data Protection Regulation (GDPR) of May 25, 2018, you have the right to access, modify, correct,
                         delete, and object to the processing of your personal data and its use for marketing purposes. You can
-                        exercise these rights at any time by contacting Sabrina Guittard by email or mail.</p>
+                        exercise these rights at any time by contacting <a href="mailto:sabrina.guittard@longfort-consulting.com">Sabrina Guittard</a> by email or mail.</p>
                 </div>
             </div>
         </section>
@@ -144,7 +144,7 @@
                     <p>Numéro de TVA: FR16988276515</p>
                     <p>Adresse: 2 place Octave Sage, 31100 Toulouse, France</p>
                     <p>n° de téléphone: +33 (0)6 52 50 24 98</p>
-                    <p>Webmaster: Jean-Louis Guittard</p>
+                    <p>Webmaster: <a href="mailto:jl.guittard@gmail.com">Jean-Louis Guittard</a></p>
                 </div>
             </div>
         </section>
@@ -190,7 +190,7 @@
                         vous disposez d'un droit d'accès, de modification, de rectification,
                         de suppression et d'opposition au traitement de vos données personnelles
                         et à leur utilisation à des fins de prospection. Vous pouvez exercer ces droits à
-                        tout moment en contactant Sabrina Guittard par mail ou par courrier.</p>
+                        tout moment en contactant <a href="mailto:sabrina.guittard@longfort-consulting.com">Sabrina Guittard</a> par mail ou par courrier.</p>
                 </div>
             </div>
         </section>
