--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
                                 <a class="text">Early-phase roadmap</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">Complex trial strategy</a>
+                                <a class="text">Complex Trial Strategy</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">Submission readiness</a>
+                                <a class="text">Submission Readiness</a>
                                 <span class="flyover-container">
                                     <a href="ressources/RegulatoryFlashAudit.pdf" target="_blank" class="pdf-link">
                                         <i class="fa-solid fa-link"></i>
@@ -196,7 +196,7 @@
                             </li>
                         </ul>
                         <p class="text">
-                            Ready to streamline your submission ?
+                            Are you ready to streamline your submission ?
                         </p>
                         <span class="buttons">
                             <a href="#contact" class="button">Leave a message</a>
@@ -281,6 +281,7 @@
 
 
 </html>
+
 
 
 
