--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <h3 class="service-heading">Regulatory Strategy</h3>
                         <ul class="service-list">
                             <li class="service-item">
-                                <a class="text">Early-phase roadmap</a>
+                                <a class="text">Early-phase Roadmap</a>
                             </li>
                             <li class="service-item">
                                 <a class="text">Complex Trial Strategy</a>
@@ -281,6 +281,7 @@
 
 
 </html>
+
 
 
 
