--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
                 <div class="footer">
                     <a>© 2025 All Rights Reserved, Longfort Consulting</a><a>|</a>
                     <a style="color: #3b3737" href="legal.html">Legal Notice & Privacy Policy <i class="fa fa-external-link" aria-hidden="true"></i></a><a>|</a>
-                    <a>&#127850; Cookie-free</a><a>|</a>
-                    <a>&#x1F33F;0.05g CO²/visit</a>
+                    <a>🍪Cookie-free</a><a>|</a>
+                    <a>🌿0.05g CO²/visit</a>
                 </div>
             </div>
         </section>
@@ -281,6 +281,7 @@
 
 
 </html>
+
 
 
 
