--- a/legal.html
+++ b/legal.html
@@ -105,7 +105,7 @@
                     <p>SIRET: 98827651500018</p>
                     <p>VAT Number: FR16988276515</p>
                     <p>Address: 2 place Octave Sage, 31100 Toulouse, France</p>
-                    <p>Phone Number: +33 (0)6 52 50 24 98</p>
+                    <p>Phone Number: +33 6 52 50 24 98</p>
                     <p>Webmaster: <a href="mailto:jl.guittard@gmail.com">Jean-Louis Guittard</a></p>
                 </div>
             </div>
@@ -160,7 +160,7 @@
                     <p>SIRET: 98827651500018</p>
                     <p>Numéro de TVA: FR16988276515</p>
                     <p>Adresse: 2 place Octave Sage, 31100 Toulouse, France</p>
-                    <p>n° de téléphone: +33 (0)6 52 50 24 98</p>
+                    <p>n° de téléphone: 06 52 50 24 98</p>
                     <p>Webmaster: <a href="mailto:jl.guittard@gmail.com">Jean-Louis Guittard</a></p>
                 </div>
             </div>
