--- a/legal.html
+++ b/legal.html
@@ -101,7 +101,7 @@
                     <h2 class="section-title">Company Information</h2>
                     <p><br>Company Name: Longfort consulting</p>
                     <p>Activity: Clinical research consulting</p>
-                    <p>Legal Status: SASU</p>
+                    <!--<p>Legal Status: SASU</p>-->
                     <p>SIRET: 98827651500018</p>
                     <p>VAT Number: FR16988276515</p>
                     <p>Address: 2 place Octave Sage, 31100 Toulouse, France</p>
@@ -156,7 +156,7 @@
                     <h2 class="section-title">Informations sur la société</h2>
                     <p><br>Dénomination sociale: Longfort consulting</p>
                     <p>Activité: Conseil en recherche clinique</p>
-                    <p>Statut juridique: Société par Actions Simplifiée Unipersonnelle (SASU)</p>
+                    <!--<p>Statut juridique: Société par Actions Simplifiée Unipersonnelle (SASU)</p>-->
                     <p>SIRET: 98827651500018</p>
                     <p>Numéro de TVA: FR16988276515</p>
                     <p>Adresse: 2 place Octave Sage, 31100 Toulouse, France</p>
