--- a/legal.html
+++ b/legal.html
@@ -101,12 +101,13 @@
                     <h2 class="section-title">Company Information</h2>
                     <p><br>Company Name: Longfort consulting</p>
                     <p>Activity: Clinical research consulting</p>
-                    <!--<p>Legal Status: SASU</p>-->
+                    <p>Legal Status: SAS with a capital of €1,000</p>
                     <p>SIRET: 98827651500018</p>
+                    <p>Registry: RCS Toulouse</p>
                     <p>VAT Number: FR16988276515</p>
                     <p>Address: 2 place Octave Sage, 31100 Toulouse, France</p>
                     <p>Phone Number: +33 6 52 50 24 98</p>
-                    <p>Webmaster: <a href="mailto:jl.guittard@gmail.com">Jean-Louis Guittard</a></p>
+                    <p>Webmaster: Jean-Louis Guittard</a></p>
                 </div>
             </div>
         </section>
@@ -144,7 +145,7 @@
                     <p>In accordance with the "Informatique et Libertés" French law of January 6, 1978, as amended, and the
                         General Data Protection Regulation (GDPR) of May 25, 2018, you have the right to access, modify, correct,
                         delete, and object to the processing of your personal data and its use for marketing purposes. You can
-                        exercise these rights at any time by contacting <a href="mailto:sabrina.guittard@longfort-consulting.com">Sabrina Guittard</a> by email or mail.</p>
+                        exercise these rights at any time by contacting sabrina.guittard@longfort-consulting.com by email.</p>
                     <br>
                 </div>
             </div>
@@ -157,12 +158,13 @@
                     <h2 class="section-title">Informations sur la société</h2>
                     <p><br>Dénomination sociale: Longfort consulting</p>
                     <p>Activité: Conseil en recherche clinique</p>
-                    <!--<p>Statut juridique: Société par Actions Simplifiée Unipersonnelle (SASU)</p>-->
+                    <p>Statut juridique: SAS au capital de 1 000€</p>
                     <p>SIRET: 98827651500018</p>
+                    <p>Greffe : RCS Toulouse</p>
                     <p>Numéro de TVA: FR16988276515</p>
                     <p>Adresse: 2 place Octave Sage, 31100 Toulouse, France</p>
                     <p>n° de téléphone: 06 52 50 24 98</p>
-                    <p>Webmaster: <a href="mailto:jl.guittard@gmail.com">Jean-Louis Guittard</a></p>
+                    <p>Webmaster: Jean-Louis Guittard</a></p>
                 </div>
             </div>
         </section>
@@ -204,7 +206,7 @@
                         vous disposez d'un droit d'accès, de modification, de rectification,
                         de suppression et d'opposition au traitement de vos données personnelles
                         et à leur utilisation à des fins de prospection. Vous pouvez exercer ces droits à
-                        tout moment en contactant <a href="mailto:sabrina.guittard@longfort-consulting.com">Sabrina Guittard</a> par mail ou par courrier.</p>
+                        tout moment en contactant sabrina.guittard@longfort-consulting.com par mail ou par courrier.</p>
                     <br>
                 </div>
             </div>
