--- a/legal.html
+++ b/legal.html
@@ -160,9 +160,9 @@
                     <p>Activité: Conseil en recherche clinique</p>
                     <p>Statut juridique: SAS au capital de 1 000€</p>
                     <p>SIRET: 98827651500018</p>
-                    <p>Greffe : RCS Toulouse</p>
+                    <p>Greffe: RCS Toulouse</p>
                     <p>Numéro de TVA: FR16988276515</p>
-                    <p>Adresse: 2 place Octave Sage, 31100 Toulouse, France</p>
+                    <p>Siège social: 2 place Octave Sage, 31100 Toulouse, France</p>
                     <p>n° de téléphone: 06 52 50 24 98</p>
                     <p>Webmaster: Jean-Louis Guittard</a></p>
                 </div>
