--- a/legal.html
+++ b/legal.html
@@ -106,8 +106,8 @@
                     <p>Registry: RCS Toulouse</p>
                     <p>VAT Number: FR16988276515</p>
                     <p>Address: 2 place Octave Sage, 31100 Toulouse, France</p>
+                    <p>Contact: sabrina.guittard@longfort-consulting.com</p>
                     <p>Phone Number: +33 6 52 50 24 98</p>
-                    <p>Webmaster: Jean-Louis Guittard</a></p>
                 </div>
             </div>
         </section>
@@ -163,8 +163,8 @@
                     <p>Greffe: RCS Toulouse</p>
                     <p>Numéro de TVA: FR16988276515</p>
                     <p>Siège social: 2 place Octave Sage, 31100 Toulouse, France</p>
+                    <p>Contact: sabrina.guittard@longfort-consulting.com</p>
                     <p>n° de téléphone: 06 52 50 24 98</p>
-                    <p>Webmaster: Jean-Louis Guittard</a></p>
                 </div>
             </div>
         </section>
