--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             <li class="service-item">
                                 <a class="text">Workflow optimization</a>
                             </li>
-                            <li class="service-item" style="padding-bottom: 28px;">
+                            <li class="service-item">
                                 <a class="text">Team coordination/training</a>
                             </li>
                         </ul>
