--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
                     </div>
                 <div class="about-details">
                     <h2 class="section-title">About Us</h2>
-                    <p class="text">
+                    <p class="text" style="text-align: left;">
                         Longfort Consulting provides regulatory expertise to secure clinical trial approval in a
                         timely and quality-controlled manner.
                     </p>
-                    <p class="text">
+                    <p class="text" style="text-align: right;">
                         Leverage our guidance in oncology, immunotherapy, rare diseases, pediatrics
                         and gene therapy to achieve successful trial outcomes.
                     </p>
-                    <p class="text">
+                    <p class="text" style="text-align: left;">
                         Conduct robust <b>clinical trials</b> using watertight protocols and a <b>purpose-built</b> document package
                         to obtain <b>first-pass approval</b> from regulatory authorities.
                     </p>
@@ -281,6 +281,7 @@
 
 
 </html>
+
 
 
 
