--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Longfort Consulting | Clinical Studies Consultant</title>
     <meta name="description"
         content="Longfort Consulting provides regulatory expertise to secure clinical trial approval in a timely and quality-controlled manner.
-    Leverage our guidance in oncology, immunotherapy, rare diseases, pediatrics and gene therapy to achieve successful trial outcomes.
+    Leverage our guidance in oncology, immunotherapy, rare diseases, paeditrics and gene therapy to achieve successful trial outcomes.
     Conduct robust clinical trials using watertight protocols and a purpose-built document package to obtain first-pass approval from regulatory authorities." />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
