--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                             </div>
                         </div>
                     </div>
-                    </div>
+                    </div>    
+<div id="content-en" class="lang-content active">
                 <div class="about-details">
                     <h2 class="section-title">About Us</h2>
                     <p class="text" style="text-align: justify; text-align: left;">
@@ -261,7 +262,7 @@
             </div>
         </section>
         <section class="about-section">
-        </section>
+        </section></div>
     </main>
     <footer class="footer">
         <section class="footer-section">
