--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 
-<body>
+<body id="content-en" class="lang-content active">
     <header>
         <nav class="navbar section-content">
             <a href="#" class="nav-logo">
@@ -109,8 +109,7 @@
                             </div>
                         </div>
                     </div>
-                    </div>    
-<div id="content-en" class="lang-content active">
+                </div>
                 <div class="about-details">
                     <h2 class="section-title">About Us</h2>
                     <p class="text" style="text-align: justify; text-align: left;">
@@ -118,7 +117,7 @@
                         timely and quality-controlled manner.
                     </p>
                     <p class="text" style="text-align: justify; text-align: left;">
-                        Leverage our guidance in oncology, immunotherapy, rare diseases, pediatrics
+                        Leverage our guidance in oncology, immunotherapy, rare diseases, paediatrics
                         and gene therapy to achieve successful trial outcomes.
                     </p>
                     <p class="text" style="text-align: justify; text-align: left;">
@@ -262,7 +261,7 @@
             </div>
         </section>
         <section class="about-section">
-        </section></div>
+        </section>
     </main>
     <footer class="footer">
         <section class="footer-section">
@@ -282,6 +281,7 @@
 
 
 </html>
+
 
 
 
