--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 <li class="nav-item">
                     <a href="#blog" class="nav-link">Blog</a>
                 </li>
+            <li class="nav-item">
+                    <a href="#" class="nav-link">En|Fr</a>
+                </li>
             </ul>
             <button id="menu-open-button" class="fas fa-bars"></button>
         </nav>
@@ -281,6 +284,7 @@
 
 
 </html>
+
 
 
 
