--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 <li class="nav-item">
                     <a href="#blog" class="nav-link">Blog</a>
                 </li>
-            <li class="nav-item">
-                    <a href="#" class="nav-link">En|Fr</a>
-                </li>
+                <span>
+                    <a>En | Fr</a>
+                </span>
             </ul>
             <button id="menu-open-button" class="fas fa-bars"></button>
         </nav>
@@ -284,6 +284,7 @@
 
 
 </html>
+
 
 
 
