--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a href="#blog" class="nav-link">Blog</a>
                 </li>
                 <span>
-                    <a>&#127468;&#127463;</a><a>-</a><a style="filter: grayscale(100%);brightness: 1.2;">&#127467;&#127479;</a>                    
+                    <a>&#127468;&#127463;</a><a>&nbsp;</a><a style="filter: grayscale(100%);brightness: 1.2;">&#127467;&#127479;</a>                    
                 </span>
             </ul>
             <button id="menu-open-button" class="fas fa-bars"></button>
@@ -284,6 +284,7 @@
 
 
 </html>
+
 
 
 
