--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en,fr">
 
 <head>
     <meta charset="UTF-8" />
@@ -284,6 +284,7 @@
 
 
 </html>
+
 
 
 
