--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
     <title>Longfort Consulting | Clinical Studies Consultant</title>
     <meta name="description"
         content="Longfort Consulting provides regulatory expertise to secure clinical trial approval in a timely and quality-controlled manner.
-    Leverage our guidance in oncology, immunotherapy, rare diseases, paeditrics and gene therapy to achieve successful trial outcomes.
-    Conduct robust clinical trials using watertight protocols and a purpose-built document package to obtain first-pass approval from regulatory authorities." />
+        Leverage our guidance in oncology, immunotherapy, rare diseases, paediatrics and gene therapy to achieve successful trial outcomes.
+        Conduct robust clinical trials using watertight protocols and a purpose-built document package to obtain first-pass approval from regulatory authorities."/>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
 </head>
 
-<body id="content-en" class="lang-content active">
+<body>
     <header>
         <nav class="navbar section-content">
             <a href="#" class="nav-logo">
@@ -44,7 +43,7 @@
                     <a href="#blog" class="nav-link">Blog</a>
                 </li>
                 <span>
-                    <a>&#127468;&#127463;</a><a>&nbsp;</a><a style="filter: grayscale(100%);brightness: 1.2;">&#127467;&#127479;</a>                    
+                    <a>&#127468;&#127463;</a><a>&nbsp;</a><a style="filter: grayscale(100%);brightness: 1.3;">&#127467;&#127479;</a>                    
                 </span>
             </ul>
             <button id="menu-open-button" class="fas fa-bars"></button>
@@ -281,39 +280,4 @@
     <a href="#about" class="button fixed-scroll-button" aria-label="Scroll to Top">&#8593;</a>
     <script src="script.js"></script>
 </body>
-
-
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
